(feat) create module file on mac

--- a/pyautogui-test.ipynb
+++ b/pyautogui-test.ipynb
@@ -494,22 +494,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'fund_code' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\danie\\Documents\\dev-windows\\rpa-gui-control\\pyautogui-test.ipynb Cell 27\u001b[0m line \u001b[0;36m2\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/danie/Documents/dev-windows/rpa-gui-control/pyautogui-test.ipynb#X40sZmlsZQ%3D%3D?line=273'>274</a>\u001b[0m         close_excel_and_goto_home()\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/danie/Documents/dev-windows/rpa-gui-control/pyautogui-test.ipynb#X40sZmlsZQ%3D%3D?line=274'>275</a>\u001b[0m         \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m- save complete: \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfile_name\u001b[39m}\u001b[39;00m\u001b[39m in \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfolder_path\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n\u001b[1;32m--> <a href='vscode-notebook-cell:/c%3A/Users/danie/Documents/dev-windows/rpa-gui-control/pyautogui-test.ipynb#X40sZmlsZQ%3D%3D?line=276'>277</a>\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mMOS\u001b[39;00m(BOS):\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/danie/Documents/dev-windows/rpa-gui-control/pyautogui-test.ipynb#X40sZmlsZQ%3D%3D?line=277'>278</a>\u001b[0m     \u001b[39msuper\u001b[39m(fund_code, end_date, start_date)\n",
-      "\u001b[1;32mc:\\Users\\danie\\Documents\\dev-windows\\rpa-gui-control\\pyautogui-test.ipynb Cell 27\u001b[0m line \u001b[0;36m2\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/danie/Documents/dev-windows/rpa-gui-control/pyautogui-test.ipynb#X40sZmlsZQ%3D%3D?line=276'>277</a>\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mMOS\u001b[39;00m(BOS):\n\u001b[1;32m--> <a href='vscode-notebook-cell:/c%3A/Users/danie/Documents/dev-windows/rpa-gui-control/pyautogui-test.ipynb#X40sZmlsZQ%3D%3D?line=277'>278</a>\u001b[0m     \u001b[39msuper\u001b[39m(fund_code, end_date, start_date)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'fund_code' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import datetime\n",
     "import os\n",
@@ -785,7 +772,18 @@
     "        control_on_save_as_popup(self.file_name, self.folder_path)\n",
     "        wait_loading()\n",
     "        close_excel_and_goto_home()\n",
-    "        print(f'- save complete: {self.file_name} in {self.folder_path}')"
+    "        print(f'- save complete: {self.file_name} in {self.folder_path}')\n",
+    "\n",
+    "class MOS(BOS):\n",
+    "    def __init__(self, fund_code, end_date, start_date='20210101', additional_param=None):\n",
+    "        # BOS의 __init__ 메서드 호출\n",
+    "        super().__init__(fund_code, end_date, start_date)\n",
+    "        \n",
+    "        # MOS에만 필요한 추가적인 초기화 코드\n",
+    "        self.additional_param = additional_param\n",
+    "\n",
+    "    # MOS에 필요한 추가 메서드나 속성을 여기에 추가하세요.\n",
+    "\n"
    ]
   },
   {
@@ -1391,7 +1389,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
