(fix) add code to MOS on mac

--- a/pyautogui-test.ipynb
+++ b/pyautogui-test.ipynb
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -775,15 +775,46 @@
     "        print(f'- save complete: {self.file_name} in {self.folder_path}')\n",
     "\n",
     "class MOS(BOS):\n",
-    "    def __init__(self, fund_code, end_date, start_date='20210101', additional_param=None):\n",
-    "        # BOS의 __init__ 메서드 호출\n",
+    "    def __init__(self, fund_code, end_date, start_date='20210101'):\n",
     "        super().__init__(fund_code, end_date, start_date)\n",
-    "        \n",
-    "        # MOS에만 필요한 추가적인 초기화 코드\n",
-    "        self.additional_param = additional_param\n",
+    "    \n",
+    "    def download_dataset(self):\n",
+    "        mapping={\n",
+    "            '8186': self.download_dataset_8186()\n",
+    "        }\n",
+    "        return mapping[self.menu_code]\n",
     "\n",
-    "    # MOS에 필요한 추가 메서드나 속성을 여기에 추가하세요.\n",
+    "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mos = MOS(fund_code='100004', end_date='20211031', additional_param='some_param')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'100004'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mos.fund_code"
    ]
   },
   {
