(feat) test is_downloaded method

--- a/pyautogui-test.ipynb
+++ b/pyautogui-test.ipynb
@@ -59,7 +59,7 @@
     }
    ],
    "source": [
-    "cposition()"
+    "position()"
    ]
   },
   {
@@ -421,79 +421,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'menu8186-code100004-save20231101.csv'"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "file_name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "time.sleep(5)\n",
-    "press('F12')\n",
-    "time.sleep(time_interval_l)\n",
-    "typewrite(file_name)\n",
-    "time.sleep(time_interval)\n",
-    "press('tab')\n",
-    "time.sleep(time_interval)\n",
-    "typewrite(file_format_select_key)\n",
-    "time.sleep(time_interval)\n",
-    "moveTo_image('excel-folder-path-arrows.png')\n",
-    "time.sleep(time_interval_l)\n",
-    "move(screen_width/4,0)\n",
-    "click()\n",
-    "time.sleep(time_interval_l)\n",
-    "typewrite(file_path)\n",
-    "time.sleep(time_interval_l)\n",
-    "hotkey('alt', 's')\n",
-    "time.sleep(time_interval)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def control_on_excel_to_save(file_path, file_name):\n",
-    "    time.sleep(5)\n",
-    "    press('F12')\n",
-    "    time.sleep(time_interval_l)\n",
-    "    typewrite(file_name)\n",
-    "    time.sleep(time_interval)\n",
-    "    press('tab')\n",
-    "    time.sleep(time_interval)\n",
-    "    typewrite(file_format_select_key)\n",
-    "    time.sleep(time_interval)\n",
-    "    moveTo_image('excel-folder-path-arrows.png')\n",
-    "    time.sleep(time_interval_l)\n",
-    "    move(screen_width/5,0)\n",
-    "    click()\n",
-    "    time.sleep(time_interval_l)\n",
-    "    typewrite(file_path)\n",
-    "    time.sleep(time_interval_l)\n",
-    "    hotkey('alt', 's')\n",
-    "    time.sleep(time_interval)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 75,
    "metadata": {},
    "outputs": [
@@ -514,91 +441,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def control_on_2160_to_set_inputs(fund_code, start_date, end_date):\n",
-    "    print(f'- step: open fund popup.')\n",
-    "    click(coord_2160_input_fund_code)\n",
-    "    time.sleep(time_interval)\n",
-    "    hotkey('ctrl', 'a')\n",
-    "    press('backspace')\n",
-    "    time.sleep(time_interval)\n",
-    "    typewrite(list(fund_code))\n",
-    "\n",
-    "    time.sleep(time_interval)\n",
-    "    click(coord_2160_input_start_date)\n",
-    "    hotkey('ctrl', 'a')\n",
-    "    press('backspace')\n",
-    "    time.sleep(time_interval)\n",
-    "    typewrite(list(start_date))\n",
-    "    \n",
-    "    time.sleep(time_interval)\n",
-    "    click(coord_2160_input_end_date)\n",
-    "    hotkey('ctrl', 'a')\n",
-    "    press('backspace')\n",
-    "    time.sleep(time_interval)\n",
-    "    typewrite(list(end_date))\n",
-    "\n",
-    "    time.sleep(time_interval)\n",
-    "    click(coord_2160_search_go)\n",
-    "    time.sleep(time_interval_l)\n",
-    "\n",
-    "def control_on_2160_to_excel():\n",
-    "    print(f'- step: click excel download button.')\n",
-    "    time.sleep(time_interval)\n",
-    "    click(coord_2160_search_go)\n",
-    "    time.sleep(time_interval_l)\n",
-    "        # 로딩 화면이 사라질 때까지 기다린다.\n",
-    "    if wait_for_loading_to_disappear('image-8186-loading.png'):\n",
-    "    # 로딩 화면이 사라지면 특정 좌표를 클릭\n",
-    "        print(f'- step: execute Excel.')\n",
-    "        click(coord_2160_excel_go)\n",
-    "        time.sleep(time_interval_l)\n",
-    "        click(coord_excel_format_popup_button)\n",
-    "    time.sleep(time_interval_loading)\n",
-    "    time.sleep(30)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "- step: open fund popup.\n"
-     ]
-    }
-   ],
-   "source": [
-    "control_on_2160_to_set_inputs('100004', '20210101', '20231031')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "- step: click excel download button.\n",
-      "- step: execute Excel.\n"
-     ]
-    }
-   ],
-   "source": [
-    "control_on_2160_to_excel()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
    "outputs": [
@@ -615,15 +457,6 @@
    ],
    "source": [
     "position()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "moveTo(coord_2205_input_fund_code)"
    ]
   },
   {
